dump/src/reader/compat/snapshots/dump__reader__compat__v3_to_v4__test__compat_v3_v4-10.snap
---
source: dump/src/reader/compat/v3_to_v4.rs
expression: movies2.settings()
---
Ok(
    Settings {
        displayed_attributes: Reset,
        searchable_attributes: Reset,
        filterable_attributes: Set(
            {},
        ),
        sortable_attributes: Set(
            {},
        ),
        ranking_rules: Set(
            [
                "words",
                "typo",
                "proximity",
                "attribute",
                "sort",
                "exactness",
            ],
        ),
        stop_words: Set(
            {},
        ),
        synonyms: Set(
            {},
        ),
        distinct_attribute: Reset,
        typo_tolerance: NotSet,
        _kind: PhantomData<dump::reader::v4::settings::Checked>,
    },
)
